@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Tst12RunAction.cc,v 1.1 1999-01-08 16:35:42 gunter Exp $
+// $Id: Tst12RunAction.cc,v 1.2 1999-04-17 08:34:18 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -24,12 +24,12 @@ Tst12RunAction::~Tst12RunAction()
 {
 }
 
-void Tst12RunAction::BeginOfRunAction(G4Run* aRun)
+void Tst12RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(runIDcounter++);
+  ((G4Run*)(aRun))->SetRunID(runIDcounter++);
 }
 
-void Tst12RunAction::EndOfRunAction(G4Run* aRun)
+void Tst12RunAction::EndOfRunAction(const G4Run*)
 {
 }
 
