@@ -18,10 +18,9 @@ Tst12SteppingAction::Tst12SteppingAction()
 Tst12SteppingAction::~Tst12SteppingAction()
 {;}
 
-void Tst12SteppingAction::UserSteppingAction()
+void Tst12SteppingAction::UserSteppingAction(const G4Step * theStep)
 {
-  G4SteppingManager * SM = GetOmnipotentSteppingManager();
-  G4Step * theStep = SM->GetStep();
+  G4SteppingManager * SM = fpSteppingManager;
   G4Track * theTrack = theStep->GetTrack();
 
   // check if it is alive
