@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:39 gunter Exp $
+$Id: History,v 1.2 1999-04-17 08:34:12 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst12PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst12RunAction
+- Modify UserSteppingAction() in Tst12SteppingAction
 
 30th November 1998  John Allison
 - Copied from test02 with new physics list for neutrons prepared by Hans-Peter.
